Melhoria no Design do Menu e Organização de Pastas.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             name="description"
             content="Sistema integrado de sonda e dispositivos sonoros para localização eficiente de sobreviventes e restos mortais em ambientes aquáticos" />
         <link rel="stylesheet" href="css/styles.css" />
+        <link rel="stylesheet" href="./HamburguerMenu/hamburguermenu.css">
         <script
             src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     </head>
@@ -43,7 +44,7 @@
                     <button class="hamburger" id="hamburger">
                         <i data-lucide="menu"></i>
                     </button>
-                        <!-- Menu Mobile  -->
+                    <!-- Menu Mobile  -->
                     <div class="nav-mobile" id="nav-mobile">
                         <button class="close-btn" id="close-btn">
                             <i data-lucide="x"></i>
@@ -781,5 +782,6 @@
       lucide.createIcons();
     </script>
                 <script src="script.js"></script>
+                <script src="./HamburguerMenu/hamburguerscript.js"></script>
             </body>
         </html>
