Botão de Próxima Questão e Mostrando o Resultado.

--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
 
                 <section class="quiz-section" id="quiz">
                     <div class="container">
-                        <h2 class="quiz-title">🔍 Quiz Interativo - Você entende
+                        <h2 class="quiz-title"> Quiz Interativo - Você entende
                             sobre Resgate Aquático?</h2>
                         <div id="quiz-box">
                             <div id="question-container"></div>
