--- a/index.html
+++ b/index.html
@@ -772,15 +772,15 @@
                             <button class="prev" id="prev">&#10094;</button>
                             <div class="slides">
                                 <img
-                                    src="https://images.unsplash.com/photo-1606945928837-01596f97a3d3?ixlib=rb-4.0.3&auto=format&fit=crop&w=900&q=80"
+                                    src="./images/testeimg.webp"
                                     class="slide active"
                                     alt="Equipe de Resgate Aquático">
                                 <img
-                                    src="https://images.unsplash.com/photo-1524620270409-99187a1f17e8?ixlib=rb-4.0.3&auto=format&fit=crop&w=900&q=80"
+                                    src="./images/testeimg.webp"
                                     class="slide"
                                     alt="Tecnologia Sonar em Operação">
                                 <img
-                                    src="https://images.unsplash.com/photo-1590399685261-333f6608b962?ixlib=rb-4.0.3&auto=format&fit=crop&w=900&q=80"
+                                    src="./images/testeimg.webp"
                                     class="slide"
                                     alt="Busca Subaquática Profissional">
                             </div>
