Images FIX, CSS Fix e Function FIX para o melhor Funcionamento do Slideshow.

--- a/index.html
+++ b/index.html
@@ -772,11 +772,11 @@
                             <button class="prev" id="prev">&#10094;</button>
                             <div class="slides">
                                 <img
-                                    src="./images/testeimg.webp"
+                                    src="./images/resgate_rio_grande_do_sul.png"
                                     class="slide active"
                                     alt="Equipe de Resgate Aquático">
                                 <img
-                                    src="./images/testeimg.webp"
+                                    src="./images/pet2.webp"
                                     class="slide"
                                     alt="Tecnologia Sonar em Operação">
                                 <img
