Personalização Final - Ajuste de Botões, Estilização, Animação e Resposividade.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="./HamburguerMenu/hamburguermenu.css">
         <link rel="stylesheet" href="./Quiz/QuizCSS.css">
         <link rel="stylesheet" href="./SlideShow/SlideShow.css">
+        <link rel="stylesheet" href="./Theme-Buttons/Theme.css">
         <script
             src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     </head>
@@ -41,6 +42,17 @@
                         <a href="#" class="btn btn-primary">Solicitar
                             Demonstração</a>
                     </nav>
+
+                    <div class="theme-switcher">
+                        <button class="theme-btn" id="light-btn"
+                            title="Tema Claro">
+                            <i data-lucide="sun"></i>
+                        </button>
+                        <button class="theme-btn" id="dark-btn"
+                            title="Tema Escuro">
+                            <i data-lucide="moon"></i>
+                        </button>
+                    </div>
 
                     <!-- Botão Hamburguer Mobile -->
                     <button class="hamburger" id="hamburger">
@@ -778,7 +790,7 @@
                                 <img
                                     src="./images/pet2.webp"
                                     class="slide"
-                                    alt="Tecnologia Sonar em Operação">
+                                    alt="Resgate de Cachorro no Rio">
                                 <img
                                     src="./images/testeimg.webp"
                                     class="slide"
@@ -833,5 +845,6 @@
                 <script src="./HamburguerMenu/hamburguerscript.js"></script>
                 <script src="./Quiz/QuizScript.js"></script>
                 <script src="./SlideShow/SlideShow.js"></script>
+                <script src="./Theme-Buttons/Theme.js"></script>
             </body>
         </html>
